--- a/src/components/Education.module.css
+++ b/src/components/Education.module.css
@@ -1,6 +1,6 @@
 .education {
     padding: 6rem 0;
-    background-color: var(--background);
+    background-color: rgba(11, 11, 21, 0.6);
 }
 
 .educationCard {
