--- a/src/components/Recommendations.module.css
+++ b/src/components/Recommendations.module.css
@@ -1,6 +1,6 @@
 .recommendations {
     padding: 6rem 0;
-    background: linear-gradient(to top, var(--background), rgba(11, 11, 21, 0.8));
+    background-color: rgba(11, 11, 21, 0.6);
 }
 
 .quoteCard {
