feat: updated the card to link instead of just specific  icon

--- a/src/components/Experience.module.css
+++ b/src/components/Experience.module.css
@@ -49,9 +49,12 @@
     box-shadow: 0 0 15px var(--primary-color);
 }
 
+.item {
+    cursor: pointer;
+}
+
 .header {
     margin-bottom: 1.5rem;
-    cursor: pointer;
     /* Indicate interactivity */
     transition: transform 0.2s ease;
 }
