--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -17,6 +17,8 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .card:hover {
